@@ -41,7 +41,8 @@ A shared library for applications using MUNGE.
 %configure \
   %{?_with_arch32: --enable-arch=32} \
   %{?_with_arch64: --enable-arch=64} \
-  --program-prefix=%{?_program_prefix:%{_program_prefix}}
+  --program-prefix=%{?_program_prefix:%{_program_prefix}} \
+  --localstatedir=/var --sysconfdir=/etc
 make
 
 %install
