@@ -1,5 +1,8 @@
 2006-05-04  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* munge.spec: Explicitly set localstatedir & sysconfdir for configure.
+	* src/etc/Makefile.am: Added use of $(localstatedir) & $(sysconfdir).
+
 	* munge.spec: Added "/var/*/*" to %files.
 	* src/etc/Makefile.am: Removed use of $(sysconfdir).  Created dirs for
 	  /etc/munge, /var/lib/munge, and /var/run/munge.
